--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="title_activity_tool_bar">ToolBar</string>
     <string name="terms">By proceeding I agree to Trade Post \nterms and conditions </string>
     <string name="tour_text"><b><u>take a tour</u></b></string>
+    <string name="message_hint">Say Something</string>
+    <string name="send">Send</string>
 
 
 
