--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,15 @@
     <string name="tour_text"><b><u>take a tour</u></b></string>
     <string name="message_hint">Say Something</string>
     <string name="send">Send</string>
+    <string name="section1_text">Name Your Item</string>
+    <string name="section2_text">Upload a Photo</string>
+    <string name="section3_text">Item\'s Condition</string>
+    <string name="section4_text">Give a Description</string>
+    <string name="section5_text">Relevant TAGS</string>
+    <string name="section6_text">Choose a Category</string>
+    <string name="section2_text_camera">Take a photo\nwith your phone</string>
+    <string name="section2_text_folder">Browse from\nyour folder</string>
+
 
 
 
