Updates: -Single Listing Activity (template only, still need to work on)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="section6_text">Choose a Category</string>
     <string name="section2_text_camera">Take a photo\nwith your phone</string>
     <string name="section2_text_folder">Browse from\nyour folder</string>
+    <string name="actionbar_single_listing"><b>MAKE AN OFFER</b></string>
 
 
 
