--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,10 @@
         <item>Misc</item>
     </string-array>
 
+    <string-array name="location_dialog">
+        <item>Use Postal Code</item>
+        <item>Use Location Service</item>
+
+    </string-array>
+
 </resources>
